# libpointmatcher

./: .bumbversion.cfg  .clang-format  .dockerignore  .env.libpointmatcher  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  CHANGELOG.rst  CMakeLists.txt  Dockerfile  Doxyfile.in  HOWTO.txt  INSTALL.txt  LICENSE  README.md  ReleaseNotes.md  UseDoxygen.cmake  changelog  commit_msg_reference.md  copyright  descriptorsStandards.txt  docker-compose.yaml  libpointmatcher.files  libpointmatcher.includes  libpointmatcherConfig.cmake.in  libpointmatcher_dependencies_installer.bash  libpointmatcher_installer.bash  mkdocs.yml  package.xml  pointmatcher.pc.in  pointmatcherConfig.cmake.in  roadmap.txt  travis.yml
contrib/yaml-cpp-pm/: CMakeLists.txt
contrib/yaml-cpp-pm/src/: aliasmanager.cpp  binary.cpp  collectionstack.h  conversion.cpp  directives.h  emitfromevents.cpp  emitter.cpp  emitterstate.cpp  emitterstate.h  emitterutils.cpp  emitterutils.h  exp.cpp  exp.h  indentation.h  iterator.cpp  iterpriv.h  node.cpp  nodebuilder.cpp  nodebuilder.h  nodeownership.cpp  nodeownership.h  null.cpp  ostream.cpp  parser.cpp  ptr_stack.h  ptr_vector.h  regex.h  regeximpl.h  scanner.cpp  scanner.h  scanscalar.cpp  scanscalar.h  scantag.cpp  scantag.h  scantoken.cpp  setting.h  simplekey.cpp  singledocparser.cpp  singledocparser.h  stream.h  (+4 more)
contrib/yaml-cpp-pm/test/: emittertests.cpp  spectests.cpp  tests.cpp
examples/: CMakeLists.txt  align_sequence.cpp  bench_octree_NDT.cpp  build_map.cpp  compute_normals.cpp  compute_overlap.cpp  convert.cpp  convertCSVtoVTK.cpp  distribution_bench.cpp  eval_solution.cpp  evaluate_dataset.cpp  filterProfiler.cpp  filter_symmetry.cpp  icp-simple.cpp  icp.cpp  icp_advance_api.cpp  icp_customized.cpp  icp_simple.cpp  k_means_clustering.cpp  list_modules.cpp  manual_data_and_descriptors.cpp  timer.cpp
examples/data/: 2D_oneBox.csv  add_descriptor_config.yaml  carCloudList.csv  car_cloud400.csv  car_cloud400_scaled.csv  cloud.00000.vtk  cloud.00001.vtk  cloud.00002.vtk  cloud400.vtk  cloudList.csv  default-convert.yaml  default.yaml  trajectory.vtk
examples/data/icp_data/: RobustWelschOutlierFilterApproximation.ref_trans  RobustWelschOutlierFilterApproximation.yaml  defaultAnnealledSigmoidDistOutlierFilter.ref_trans  defaultAnnealledSigmoidDistOutlierFilter.yaml  defaultDistanceLimitDataPointsFilter.yaml  defaultFixStepSamplingDataPointsFilter.ref_trans  (+11 more)
examples/demo_Qt/: demo.pro
examples/demo_cmake/: CMakeLists.txt
examples/demo_external_link/: CMakeLists.txt
examples/icp_tutorial/: icp_tutorial_cfg.yaml  icp_tutorial_empty.yaml
examples/python/: align_sequence.py  build_map.py  compute_overlap.py  icp.py  icp_advance_api.py  icp_customized.py  icp_simple.py  point_cloud_generator.py  utils.py
examples/tmptest/: test_all.sh
python/: CMakeLists.txt  pypoint_matcher.cpp  pypoint_matcher_helper.h  pypointmatcher.cpp  pypointmatcher_helper.h  pyproject.toml  setup.cfg  setup.py
python/datapointsfilters/: add_descriptor.cpp  add_descriptor.h  angle_limit.cpp  angle_limit.h  bounding_box.cpp  bounding_box.h  boundingbox.cpp  boundingbox.h  compression.cpp  compression.h  compute_normals.cpp  compute_normals.h  covariance_sampling.cpp  covariance_sampling.h  covariancesampling.cpp  covariancesampling.h  cut_at_descriptor_threshold.cpp  cut_at_descriptor_threshold.h  cutatdescriptorthreshold.cpp  cutatdescriptorthreshold.h  decompress.cpp  decompress.h  distance_limit.cpp  distance_limit.h  distancelimit.cpp  distancelimit.h  ellipsoids.cpp  ellipsoids.h  fix_step_sampling.cpp  fix_step_sampling.h  fixstepsampling.cpp  fixstepsampling.h  gestalt.cpp  gestalt.h  identity.cpp  identity.h  incidence_angle.cpp  incidence_angle.h  incidenceangle.cpp  incidenceangle.h  (+60 more)
python/errorminimizers/: identity.cpp  identity.h  point_to_plane.cpp  point_to_plane.h  point_to_plane_with_cov.cpp  point_to_plane_with_cov.h  point_to_point.cpp  point_to_point.h  point_to_point_similarity.cpp  point_to_point_similarity.h  point_to_point_with_cov.cpp  point_to_point_with_cov.h  pointtoplane.cpp  pointtoplane.h  pointtoplanewithcov.cpp  pointtoplanewithcov.h  pointtopoint.cpp  pointtopoint.h  pointtopointsimilarity.cpp  pointtopointsimilarity.h  pointtopointwithcov.cpp  pointtopointwithcov.h
python/modules/: data_points_filters_module.cpp  data_points_filters_module.h  datapointsfilters_module.cpp  datapointsfilters_module.h  error_minimizers_module.cpp  error_minimizers_module.h  errorminimizers_module.cpp  errorminimizers_module.h  point_matcher_module.cpp  point_matcher_module.h  point_matcher_support_module.cpp  point_matcher_support_module.h  pointmatcher_module.cpp  pointmatcher_module.h  pointmatchersupport_module.cpp  pointmatchersupport_module.h
python/pointmatcher/: data_points.cpp  data_points.h  data_points_filter.cpp  data_points_filter.h  data_points_filters.cpp  data_points_filters.h  datapoints.cpp  datapoints.h  datapointsfilter.cpp  datapointsfilter.h  datapointsfilters.cpp  datapointsfilters.h  error_minimizer.cpp  error_minimizer.h  errorminimizer.cpp  errorminimizer.h  icp.cpp  icp.h  icp_chain_base.cpp  icp_chain_base.h  icp_sequence.cpp  icp_sequence.h  icpchainbase.cpp  icpchainbase.h  icpsequence.cpp  icpsequence.h  impl.cpp  impl.h  inspector.cpp  inspector.h  io.cpp  io.h  matcher.cpp  matcher.h  matches.cpp  matches.h  outlier_filter.cpp  outlier_filter.h  outlier_filters.cpp  outlier_filters.h  (+22 more)
python/pointmatchersupport/: bibliography.cpp  bibliography.h  logger.cpp  logger.h  logger_impl.cpp  logger_impl.h  parametrizable.cpp  parametrizable.h  registrar.cpp  registrar.h
python/pypointmatcher/: __init__.py
python/pypointmatcher_native/: __init__.py
utest/: CMakeLists.txt  CTestCustom.cmake  listVersionsMacOS.sh  listVersionsUbuntu.sh  utest.cpp  utest.h  utest.hpp
utest/internal/: Distribution.cpp
utest/ui/: DataFilters.cpp  DataPoints.cpp  Distributions.cpp  ErrorMinimizers.cpp  IO.cpp  Inspectors.cpp  Loggers.cpp  Matcher.cpp  Outliers.cpp  PointCloudGenerator.cpp  SymmetryDataFilter.cpp  Transformations.cpp  Utils.cpp
(+507 files in other folders)
